change average income text input to number input

--- a/app/views/calculator/new.html.erb
+++ b/app/views/calculator/new.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag('/calculator') do %>
   <%= label_tag(:average_income, 'Average long term rental income per month:') %>
-  <%= text_field_tag(:average_income, params[:average_income], class: 'form-input', id: 'average_income', required: true) %>
+  <%= number_field_tag(:average_income, params[:average_income], class: 'form-input', id: 'average_income', required: true) %>
 
   <%= label_tag(:address, 'Address:') %>
   <%= text_field_tag(:address, params[:address], class: 'form-input', id: 'address', required: true) %>
